[project]
name = "atma16"
version = "0.1.0"
description = "a solution of atmaCup16"
authors = [
    { name = "daikichiba9511", email = "daikichiba.tech.ml@gmail.com" }
]
dependencies = [
    "numpy>=1.26.2",
    "pandas>=2.1.3",
    "polars>=0.19.19",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "scipy>=1.11.4",
    "tqdm>=4.66.1",
    "xgboost>=2.0.2",
    "scikit-learn>=1.3.2",
    "pyarrow>=14.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.0",
    "ipython~=8.14.0",
    "jupyterlab~=4.0.2",
    "wandb~=0.15.4",
    "mypy>=1.4.1",
    "ipykernel>=6.25.2",
    "pyproject-flake8>=6.0.0.post1",
    "plotly>=5.17.0",
    "memray>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
preview = true
select = ["E", "F", "B", "W", "I"]
target-version = "py310"
line-length = 119
ignore = [
    "E203",  # white space before ':', not compatible with black
    "E501",  # line-length violation
    "B905",  # zip iterator without strict parameter
]
unfixable = ["B"]
exclude = [
    "git",
    ".venv",
    "__pycache__",
    ".github",
    ".mypy_cache",
    ".vscode",
    ".pytest_cache",
    "notebooks",
    ".ipynb_checkpoints",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
disallow_untyped_defs = true
allow_redefinition = true
warn_redundant_casts = true
show_error_context = true
incremental = false
no_implicit_optional = true
warn_unreachable = true
show_error_codes = true
pretty = true
disallow_incomplete_defs = true
warn_no_return = true
plugins = "numpy.typing.mypy_plugin"

# [tool.pyright]
# diagnosticMode = "openFilesOnly"
# autoImportCompletions = false
# autoSearchPaths = true
# useLibraryCodeForTypes = true
# completeFunctionParens = true
